crates/picus/tests/ui/no_emit_ui_action.rs
//! Global emit helper is internal-only.
use picus::emit_ui_action;

fn main() {
    let _ = emit_ui_action;
}
